testing a commit to local repo

--- a/README
+++ b/README
@@ -23,3 +23,5 @@ $PLACEWEB_CONFIG['uploadDir'] = "/var/www/place/public/content/";
 
 Note all views are located in
 /application/views/scripts
+
+just a test
